docs: consolidate module READMEs into top-level README
Remove per-module READMEs (all stale, referencing Wasmtime 36.0.2),
performance baselines (fabricated numbers), error handling guide,
integration guide, known issues, and Maven site index. Add module
descriptions, native loader explanation, benchmark instructions,
and drop macOS x86_64 from platform table.